--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Cardo","Open Sans", sans-serif;
   color: #444444;
 }
 
@@ -23,7 +23,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Nunito", sans-serif;
+  font-family: "Oswald","Nunito", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -68,7 +68,6 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 32px;
   margin: 0;
   padding: 0;
-  line-height: 1;
   font-weight: 600;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -90,6 +89,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header.header-scrolled .logo a, #header.header-inner-pages .logo a {
   color: #493c3e;
+  font-size: 25pt;
 }
 
 @media (max-width: 992px) {
@@ -126,7 +126,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 15px;
   padding: 0 4px;
   letter-spacing: 0.4px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Cardo","Poppins", sans-serif;
 }
 
 .nav-menu > ul > li > a:before {
@@ -394,7 +394,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .btn-get-started {
-  font-family: "Poppins", sans-serif;
+  font-family: "Cardo","Poppins", sans-serif;
   text-transform: uppercase;
   font-weight: 400;
   font-size: 13px;
