--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,18 @@
-/**
-* Template Name: Tempo - v2.2.1
-* Template URL: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
-  font-family: "Cardo","Open Sans", sans-serif;
-  color: #444444;
+  font-family: "Open Sans", sans-serif;
+  color: #171c20;
 }
 
 a {
-  color: #e43c5c;
+  color: #FBA301;
+}
+ul{
+  list-style: square;
+  padding-left: 20px;
 }
 
 a:hover {
-  color: #ea6981;
+  color: #FBA301;
   text-decoration: none;
 }
 
@@ -26,9 +20,6 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Oswald","Nunito", sans-serif;
 }
 
-/*--------------------------------------------------------------
-# Back to top button
---------------------------------------------------------------*/
 .back-to-top {
   position: fixed;
   display: none;
@@ -46,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 40px;
   height: 40px;
   border-radius: 50px;
-  background: #e43c5c;
+  background: #FBA301;
   color: #fff;
   transition: all 0.4s;
 }
@@ -55,9 +46,6 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 19px;
 }
 
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
 #header {
   transition: all 0.5s;
   z-index: 997;
@@ -88,7 +76,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header.header-scrolled .logo a, #header.header-inner-pages .logo a {
-  color: #493c3e;
+  color:#171c20;
   font-size: 25pt;
 }
 
@@ -98,10 +86,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-/*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
-/* Desktop Navigation */
 .nav-menu ul {
   margin: 0;
   padding: 0;
@@ -126,7 +110,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 15px;
   padding: 0 4px;
   letter-spacing: 0.4px;
-  font-family: "Cardo","Poppins", sans-serif;
+  font-family: Poppins", sans-serif;
 }
 
 .nav-menu > ul > li > a:before {
@@ -136,7 +120,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 2px;
   bottom: -6px;
   left: 0;
-  background-color: #e43c5c;
+  background-color: #FBA301;
   visibility: hidden;
   transform: scaleX(0);
   transition: all 0.3s ease-in-out 0s;
@@ -212,7 +196,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header-scrolled .nav-menu > ul > li > a, .header-inner-pages .nav-menu > ul > li > a {
-  color: #493c3e;
+  color: #171c20;
 }
 
 @media (max-width: 1366px) {
@@ -227,7 +211,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-/* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
   right: 15px;
@@ -334,9 +317,6 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 
-/*--------------------------------------------------------------
-# Hero Section
---------------------------------------------------------------*/
 #hero {
   width: 100%;
   height: 100vh;
@@ -394,7 +374,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .btn-get-started {
-  font-family: "Cardo","Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
   text-transform: uppercase;
   font-weight: 400;
   font-size: 13px;
@@ -439,9 +419,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-/*--------------------------------------------------------------
-# Sections General
---------------------------------------------------------------*/
 section {
   padding: 60px 0;
 }
@@ -456,14 +433,13 @@ section {
 }
 
 .section-title h2 {
-  font-size: 13px;
+  font-size: 32px;
   letter-spacing: 1px;
   font-weight: 700;
   padding: 8px 20px;
   line-height: 1;
   margin: 0;
-  background: #fdeff2;
-  color: #e43c5c;
+  color: #813cb0;
   display: inline-block;
   text-transform: uppercase;
   border-radius: 50px;
@@ -471,8 +447,9 @@ section {
 
 .section-title h3 {
   margin: 15px 0 0 0;
-  font-size: 32px;
+  font-size: 24px;
   font-weight: 700;
+  color: #5621a3;
 }
 
 .section-title h3 span {
@@ -487,15 +464,14 @@ section {
 @media (min-width: 1024px) {
   .section-title p {
     text-align: justify;
+    max-width: 768px;
   }
 }
 
-/*--------------------------------------------------------------
-# About
---------------------------------------------------------------*/
 .about .content h3 {
   font-weight: 600;
   font-size: 26px;
+  color:#5621a3;
 }
 
 .about .content ul {
@@ -517,7 +493,7 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #e43c5c;
+  color: #FBA301;
   line-height: 1;
 }
 
@@ -548,9 +524,6 @@ section {
   text-decoration: none;
 }
 
-/*--------------------------------------------------------------
-# Services
---------------------------------------------------------------*/
 .services {
   padding-bottom: 30px;
 }
@@ -620,9 +593,6 @@ section {
   color: #fff;
 }
 
-/*--------------------------------------------------------------
-# Features
---------------------------------------------------------------*/
 .features {
   padding-top: 0;
 }
@@ -658,11 +628,23 @@ section {
   color: #e43c5c;
 }
 
-/*--------------------------------------------------------------
-# Cta
---------------------------------------------------------------*/
 .cta {
   background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("../img/cta-bg.jpg") center center;
+  background-size: cover;
+  padding: 60px 0;
+}
+.cta.preparatoria {
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("../img/preparatoria.jpg") center center;
+  background-size: cover;
+  padding: 60px 0;
+}
+.cta.licenciatura {
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("../img/licenciatura.jpg") center center;
+  background-size: cover;
+  padding: 60px 0;
+}
+.cta.maestria {
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("../img/licenciatura.jpg") center center;
   background-size: cover;
   padding: 60px 0;
 }
@@ -693,8 +675,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #e43c5c;
-  border: 2px solid #e43c5c;
+  background: #FBA301;
+  border: 2px solid #FBA301;
 }
 
 @media (min-width: 1024px) {
@@ -703,9 +685,6 @@ section {
   }
 }
 
-/*--------------------------------------------------------------
-# Portfolio
---------------------------------------------------------------*/
 .portfolio #portfolio-flters {
   padding: 0;
   margin: 0 auto 25px auto;
@@ -798,183 +777,6 @@ section {
   bottom: 0;
 }
 
-/*--------------------------------------------------------------
-# Pricing
---------------------------------------------------------------*/
-.pricing .box {
-  padding: 20px;
-  background: #f9f9f9;
-  text-align: center;
-  border-radius: 8px;
-  position: relative;
-  overflow: hidden;
-  border: 2px solid #f9f9f9;
-}
-
-.pricing .box h3 {
-  font-weight: 400;
-  padding: 15px;
-  margin-top: 15px;
-  font-size: 20px;
-  font-weight: 600;
-  color: #493c3e;
-}
-
-.pricing .box h4 {
-  font-size: 42px;
-  color: #e43c5c;
-  font-weight: 500;
-  font-family: "Open Sans", sans-serif;
-  margin-bottom: 20px;
-}
-
-.pricing .box h4 sup {
-  font-size: 20px;
-  top: -15px;
-  left: -3px;
-}
-
-.pricing .box h4 span {
-  color: #bababa;
-  font-size: 16px;
-  font-weight: 300;
-}
-
-.pricing .box ul {
-  padding: 0;
-  list-style: none;
-  color: #493c3e;
-  text-align: center;
-  line-height: 20px;
-  font-size: 14px;
-}
-
-.pricing .box ul li {
-  padding-bottom: 16px;
-}
-
-.pricing .box ul i {
-  color: #e43c5c;
-  font-size: 18px;
-  padding-right: 4px;
-}
-
-.pricing .box ul .na {
-  color: #ccc;
-  text-decoration: line-through;
-}
-
-.pricing .box .btn-wrap {
-  padding: 15px;
-  text-align: center;
-}
-
-.pricing .box .btn-buy {
-  display: inline-block;
-  padding: 8px 40px 10px 40px;
-  border-radius: 50px;
-  border: 2px solid #e43c5c;
-  color: #e43c5c;
-  font-size: 14px;
-  font-weight: 400;
-  font-family: "Nunito", sans-serif;
-  font-weight: 600;
-  transition: 0.3s;
-}
-
-.pricing .box .btn-buy:hover {
-  background: #e43c5c;
-  color: #fff;
-}
-
-.pricing .recommended {
-  border-color: #e43c5c;
-}
-
-.pricing .recommended .btn-buy {
-  background: #e43c5c;
-  color: #fff;
-}
-
-.pricing .recommended .btn-buy:hover {
-  background: #d91e42;
-  border-color: #d91e42;
-}
-
-.pricing .recommended-badge {
-  position: absolute;
-  top: 5px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
-  font-size: 13px;
-  padding: 3px 25px 6px 25px;
-  background: #fce6ea;
-  color: #e43c5c;
-  border-radius: 50px;
-}
-
-/*--------------------------------------------------------------
-# F.A.Q
---------------------------------------------------------------*/
-.faq {
-  padding: 60px 0;
-}
-
-.faq .faq-list {
-  padding: 0;
-  list-style: none;
-}
-
-.faq .faq-list li {
-  padding: 0 0 20px 25px;
-}
-
-.faq .faq-list a {
-  display: block;
-  position: relative;
-  font-family: #e43c5c;
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.faq .faq-list i {
-  font-size: 18px;
-  position: absolute;
-  left: -25px;
-  top: 6px;
-}
-
-.faq .faq-list p {
-  margin-bottom: 20px;
-  font-size: 15px;
-}
-
-.faq .faq-list a.collapse {
-  color: #e43c5c;
-}
-
-.faq .faq-list a.collapsed {
-  color: #343a40;
-}
-
-.faq .faq-list a.collapsed:hover {
-  color: #e43c5c;
-}
-
-.faq .faq-list a.collapsed i::before {
-  content: "\eab2" !important;
-}
-
-@media (min-width: 1280px) {
-  .faq .container {
-    padding: 0 120px;
-  }
-}
-
-/*--------------------------------------------------------------
-# Team
---------------------------------------------------------------*/
 .team {
   background: #fff;
   padding: 60px 0;
@@ -1052,9 +854,6 @@ section {
   opacity: 1;
 }
 
-/*--------------------------------------------------------------
-# Contact
---------------------------------------------------------------*/
 .contact .info {
   width: 100%;
   background: #fff;
@@ -1062,7 +861,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #e43c5c;
+  color: #FBA301;
   float: left;
   width: 44px;
   height: 44px;
@@ -1079,14 +878,14 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #493c3e;
+  color: #171c20;
 }
 
 .contact .info p {
   padding: 0 0 0 60px;
   margin-bottom: 0;
   font-size: 14px;
-  color: #816a6e;
+  color: #171c20;
 }
 
 .contact .info .email, .contact .info .phone {
@@ -1094,7 +893,7 @@ section {
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #e43c5c;
+  background: #813cb0;
   color: #fff;
 }
 
@@ -1164,7 +963,7 @@ section {
 }
 
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #e43c5c;
+  border-color: #FBA301;
 }
 
 .contact .php-email-form input {
@@ -1176,7 +975,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #e43c5c;
+  background: #FBA301;
   border: 0;
   padding: 10px 28px;
   color: #fff;
@@ -1185,7 +984,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #d01d3f;
+  background: #813cb0;;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1206,9 +1005,6 @@ section {
   }
 }
 
-/*--------------------------------------------------------------
-# Breadcrumbs
---------------------------------------------------------------*/
 .breadcrumbs {
   padding: 15px 0;
   background: #f6f4f4;
@@ -1220,10 +1016,13 @@ section {
     margin-top: 50px;
   }
 }
-
+.breadcrumbs h1{
+  color: #813cb0;
+}
 .breadcrumbs h2 {
   font-size: 26px;
   font-weight: 600;
+  color:#FBA301;
 }
 
 .breadcrumbs ol {
@@ -1245,10 +1044,17 @@ section {
   color: #655356;
   content: "/";
 }
-
-/*--------------------------------------------------------------
-# Portfolio Details
---------------------------------------------------------------*/
+@media(min-width: 992px){
+  .main-inner-pages .cta {
+    margin-top: 65px;
+  }
+}
+.main-inner-pages .cta h1{
+  color: #fff;
+}
+.portfolio-details h2{
+  color: #5621a3;
+}
 .portfolio-details {
   padding-top: 40px;
 }
@@ -1329,10 +1135,37 @@ section {
     margin-top: 30px;
   }
 }
+.portfolio-details .accordion .accordion-item .btn{
+  margin: 5px 0 15px 0;
+}
 
-/*--------------------------------------------------------------
-# Blog
---------------------------------------------------------------*/
+.portfolio-details .btn.btn-outline-primary{
+  color: #813cb0;
+  border-color: #813cb0;
+  min-width: 205px;
+  margin-bottom: 15px;
+} 
+.portfolio-details .btn.btn-outline-primary:hover,
+.portfolio-details .btn.btn-outline-primary:focus,
+.portfolio-details .btn.btn-outline-primary:active{
+  background: #FBA301;
+  border-color:  #FBA301;
+  color: #fff;
+  box-shadow: 0 0 0 0.2rem rgb(251 163 1 / 50%);
+}
+
+.portfolio-details .btn.btn-outline-primary:before {
+  font-family: 'IcoFont';
+  content: "\eaa1";
+  float: right;
+  transition: all 0.5s;
+ } 
+.portfolio-details .btn.btn-outline-primary.collapsed:before {
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
 .blog {
   padding: 40px 0 20px 0;
 }
@@ -1411,7 +1244,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #e43c5c;
+  background: #FBA301;
   color: #fff;
   padding: 5px 20px 7px 20px;
   transition: 0.3s;
@@ -1420,7 +1253,7 @@ section {
 }
 
 .blog .entry .entry-content .read-more a:hover {
-  background: #d01d3f;
+  background: #FBA301;
 }
 
 .blog .entry .entry-content h3 {
@@ -1868,9 +1701,6 @@ section {
   font-size: 14px;
 }
 
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
 #footer {
   color: #444444;
   font-size: 14px;
@@ -1987,7 +1817,7 @@ section {
   background: none;
   font-size: 15px;
   padding: 0 22px;
-  background: #e43c5c;
+  background: #FBA301;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -1995,7 +1825,7 @@ section {
 }
 
 #footer .footer-newsletter form input[type="submit"]:hover {
-  background: #d01d3f;
+  background: #FBA301;
 }
 
 #footer .credits {
@@ -2007,7 +1837,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #e43c5c;
+  background: #FBA301;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -2020,7 +1850,7 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #d01d3f;
+  background: #813cb0;
   color: #fff;
   text-decoration: none;
 }
