--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -553,7 +553,7 @@ section {
 }
 
 .services .icon-box:hover::before {
-  background: #e43c5c;
+  background: #FBA301;
   top: 0;
   border-radius: 0px;
 }
@@ -565,14 +565,14 @@ section {
 .services .icon i {
   font-size: 48px;
   line-height: 1;
-  color: #e43c5c;
+  color: #FBA301;
   transition: all 0.3s ease-in-out;
 }
 
 .services .title {
-  font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
+  font-family: "Nunito",sans-serif;
 }
 
 .services .title a {
@@ -644,7 +644,7 @@ section {
   padding: 60px 0;
 }
 .cta.maestria {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("../img/licenciatura.jpg") center center;
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("../img/maestria.jpg") center center;
   background-size: cover;
   padding: 60px 0;
 }
@@ -709,7 +709,7 @@ section {
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #e43c5c;
+  background: #FBA301;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -735,13 +735,14 @@ section {
   bottom: -50px;
   z-index: 3;
   transition: all ease-in-out 0.3s;
-  background: #e43c5c;
+  background:#FBA301;
   padding: 15px 20px;
 }
 
 .portfolio .portfolio-item .portfolio-info h4 {
   font-size: 18px;
   color: #fff;
+  font-family: "Nunito", sans-serif;
   font-weight: 600;
 }
 
@@ -789,6 +790,7 @@ section {
   border-radius: 5px;
   background: #fff;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  max-height: 255px;
 }
 
 .team .member .member-img {
@@ -805,19 +807,24 @@ section {
   opacity: 0;
   transition: ease-in-out 0.3s;
   text-align: center;
-  background: rgba(255, 255, 255, 0.85);
+  background: rgba(251, 163, 1, 1);
 }
 
 .team .member .social a {
   transition: color 0.3s;
-  color: #493c3e;
+  color: #Fff;
   margin: 0 10px;
   padding-top: 8px;
   display: inline-block;
 }
 
 .team .member .social a:hover {
-  color: #e43c5c;
+  color: #fff;
+}
+.team .member .social a h4{
+  font-family: "Nunito", sans-serif;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .team .member .social i {
@@ -1054,6 +1061,7 @@ section {
 }
 .portfolio-details h2{
   color: #5621a3;
+  margin:15px 0 5px 0;
 }
 .portfolio-details {
   padding-top: 40px;
